Adjust meta and add images

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,6 +23,7 @@ body {
   background-color: #eee;
   border-radius: 6px;
   padding: 60px;
+  text-align: center;
   h1 {
     font-size: 60px;
     line-height: 1;
