--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,25 +8,55 @@
   padding: 0.2em 0;
 }
 
-body {
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #333;
+html {
+  background: #c93375;
 }
 
+body {
+  font-family: 'Walter Turncoat', Helvetica, Arial, sans-serif;
+  color: #010101;
+}
+
+
+
 .hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
+  margin: 10px auto 0 auto;
+  max-width: 700px;
   font-size: 18px;
   font-weight: 200;
   line-height: 30px;
-  background-color: #eee;
+  // background-color: #eee;
   border-radius: 6px;
-  padding: 60px;
+  padding: 10px 10px 40px 10px;
   text-align: center;
   h1 {
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
+  }
+}
+
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+  margin: 20px 0 40px;
+}
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
+.contact {
+  color: white;
+  margin-top: 12px;
+  p {
+    margin: 2px auto;
+    line-height: 1.2;
   }
 }
